Fixed adjusting of main view area size when navigation bar is visible / invisible

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -31,11 +31,11 @@ body {
 }
 
 .vmenu-on {
-  margin-left: 16.66667%
+  margin-left: 225px;
 }
 
 .vmenu-off {
-  margin-left: 0;
+  margin-left: 65px;
 }
 
 .inline {
