--- a/app/assets/stylesheets/partial/_library.scss
+++ b/app/assets/stylesheets/partial/_library.scss
@@ -48,12 +48,21 @@
     padding-right: 1em;
   }
 
+  .library-main {
+    overflow-y: scroll;
+    height: 100%;
+  }
+
   .library-main.affix {
     position: fixed;
     overflow-y: scroll;
-    margin-right: 2em;
-    top: 0;
-    //height: 100%;
+    height: 100%;
+  }
+
+  .library-main.affix-top {
+    position: fixed;
+    overflow-y: scroll;
+    height: 100%;
   }
 
   .library-main {
